crates/noaa-weather-summary/tests/snapshots/stations__station_collection_summary_snapshot.snap
---
source: crates/noaa-weather-summary/tests/stations.rs
expression: "stations.summarize(&SummaryOptions::default())"
---
title: Observation stations
subtitle: 2 stations
emphasis: None
sections:
  - Table:
      heading: ~
      columns:
        - title: Station ID
          key: stationIdentifier
          also: []
          align: Left
        - title: Name
          key: name
          also: []
          align: Left
        - title: Elevation
          key: elevation
          also: []
          align: Right
        - title: Time Zone
          key: timeZone
          also: []
          align: Left
        - title: Coordinates
          key: geometry
          also: []
          align: Left
        - title: Provider
          key: provider
          also:
            - subProvider
          align: Left
        - title: Zones
          key: forecast
          also:
            - county
            - fireWeatherZone
          align: Left
        - title: Distance
          key: distance
          also: []
          align: Right
        - title: Bearing
          key: bearing
          also: []
          align: Right
      rows:
        - - value:
              Identifier: 0007W
            emphasis: None
          - value:
              Text: Montford Middle
            emphasis: None
          - value:
              Quantity:
                value: 161
                unit: ft
                precision: 0
            emphasis: None
          - value:
              Text: America/New_York
            emphasis: None
          - value:
              Coordinates:
                lat: 30.53099
                lon: -84.1787
            emphasis: None
          - value:
              Lines:
                - Text: MesoWest
                - Text: WEATHERSTEM
            emphasis: None
          - value:
              Lines:
                - Identifier: FLZ017
                - Identifier: FLC073
                - Identifier: FLZ017
            emphasis: None
          - value: Missing
            emphasis: None
          - value: Missing
            emphasis: None
        - - value:
              Identifier: 000PG
            emphasis: None
          - value:
              Text: Southside Road
            emphasis: None
          - value:
              Quantity:
                value: 423.99999999999994
                unit: ft
                precision: 0
            emphasis: None
          - value:
              Text: America/Los_Angeles
            emphasis: None
          - value:
              Coordinates:
                lat: 36.78921
                lon: -121.33943
            emphasis: None
          - value:
              Lines:
                - Text: MesoWest
                - Text: PGE
            emphasis: None
          - value:
              Lines:
                - Identifier: CAZ528
                - Identifier: CAC069
                - Identifier: CAZ528
            emphasis: None
          - value: Missing
            emphasis: None
          - value: Missing
            emphasis: None
notes:
  - More stations available
